# ffmpeg_study

./: README.md
code/ffmpeg/: CMakeLists.txt  main.cpp
code/ffmpeg/lib/ffmpeg/share/doc/ffmpeg/: developer.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-devices.html  ffprobe-all.html
code/ffmpeg/lib/ffmpeg/share/man/man1/: ffmpeg-formats.1
code/ffmpeg/lib/libSDL2/lib/: libSDL2.la  libSDL2_test.la
code/ffmpeg/test/: audio_decode.c  avmerge.c  demuxing_decoding.c  extra_audio_ffapi.c  extra_mediainfo.c  extra_video.c  extra_video_1.c  ff_log.c  ffmpeg_file.c  ffmpeg_list.c  mediainfo.c  remuxing.c  remuxing_audio_video.c
code/ffmpeg/test/lib/ffmpeg/lib/: avformat-59.def
code/ffmpeg/test/lib/ffmpeg/share/doc/ffmpeg/: ffmpeg-protocols.html  git-howto.html
code/ffmpeg/test/lib/ffmpeg/share/man/man1/: ffmpeg-bitstream-filters.1  ffprobe-all.1
code/ffmpeg/test/lib/libSDL2/lib/: libSDL2main.la
code/ffmpeg/test/lib/libSDL2/lib/pkgconfig/: sdl2.pc
code/ffmpeg/test/sdl/: cachedataR.opus  event_sdl.c  first_sdl.c  out.opus  pcm_player.c  wav2sbc.py  yuv_player.c  yuv_test.c
code/ffmpeg/test/sdl/opus-tools-0.2-opus-1.3/: 123.opus
code/ffmpeg/test/sdl/opus-tools-0.2-opus-1.3/opus-tools-0.2/: Makefile  config.h  config.status  libtool  opus.pc
code/ffmpeg/test/sdl/opus-tools-0.2-opus-1.3/opus-tools-0.2/celt/.deps/: bands.Plo  celt.Plo  celt_decoder.Plo  celt_encoder.Plo  celt_lpc.Plo  cwrs.Plo  entcode.Plo  entdec.Plo  entenc.Plo  kiss_fft.Plo  laplace.Plo  mathops.Plo  (+6 more)
code/ffmpeg/test/sdl/opus-tools-0.2-opus-1.3/opus-tools-0.2/doc/: Makefile
(+1162 files in other folders)
